--- a/srch-website/src/styles/NavBarSearchResults.css
+++ b/srch-website/src/styles/NavBarSearchResults.css
@@ -16,6 +16,12 @@
   transition: background-color 0.5s ease;
 }
 
+.results-item-nav-bar:focus,
+.results-item-nav-bar:focus-visible {
+  background-color: var(--color-accent-30);
+  outline: none !important;
+}
+
 .results-section-nav-bar {
   background: var(--color-text-hover);
   display: block;
@@ -63,21 +69,21 @@
 }
 
 .results-view-all-nav-bar {
-  padding-top: 0.75rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: var(--color-text);
+  padding-top: 0.5rem;
   font-size: 0.875rem;
 }
 .results-window-nav-bar {
-  padding: 0 1.25rem 0 1.25rem;
   font-family: var(--content-font);
 }
 
 .results-list-nav-bar {
   overflow-y: auto;
-  padding-top: 0.5rem;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .results-header-nav-bar {
@@ -99,7 +105,6 @@
   text-decoration: underline;
 }
 
-.view-all-link-nav-bar:hover,
 .view-all-link-nav-bar:focus-visible {
   color: var(--color-text-hover);
   outline: 2px solid var(--color-focus-ring);
