--- a/srch-website/src/styles/SearchBar.css
+++ b/srch-website/src/styles/SearchBar.css
@@ -2,8 +2,6 @@
   position: relative;
   align-items: center;
   overflow: visible;
-  padding-left: 2rem;
-  padding-right: 2rem;
   padding-top: 1rem;
   width: 100%;
   font-family: var(--content-font);
